// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering <ExpenseSummary/> should render with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 3 expenses totalling #1,040.00
  </h1>
</div>
`;

exports[`Rendering <ExpenseSummary/> should render with single expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling #545.00
  </h1>
</div>
`;
